pc version universe update

--- a/eng/index.html
+++ b/eng/index.html
@@ -176,124 +176,73 @@
         <p class="content">노어(Noer)에서 펼쳐지는 Mr.TAL과<br>가디언즈의 아름답고 신비한 모험</p>
         <div class="subcontent">노어(Noer)에는 Mr.TAL과 그를 수호하는 5마리의 가디언즈가 있습니다.<br>Mr.TAL이 되어 가디언즈와 함께 모험을 떠나보세요.</div>
         <div class="carton">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="tab">
-                <p class="season1 on">
-                  <strong class="luckiest">SEASON 01</strong>
-                  <span>A lifelong friend I met in dystopia</span>
-                </p>
-                <p class="season2">
-                  <strong class="luckiest">SEASON 02</strong>
-                  <span>COMING SOON</span>
-                </p>
-              </div>
-              <div class="container">
-                <img src="../resource/img/pc/universe/u_img_1.jpg">
-                <div class="text">
-                  2XXX,<br>a world where human emotions and culture are not respected.<br>All you can see is a tall building.<br><strong>There is no green color anywhere.</strong><br>In a world full of dust, people wearing oxygen mask respirators walk on the streets.
-                </div>
-                <p class="page">1</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="tab">
-                <p class="season1 on">
-                  <strong class="luckiest">SEASON 01</strong>
-                  <span>A lifelong friend I met in dystopia</span>
-                </p>
-                <p class="season2">
-                  <strong class="luckiest">SEASON 02</strong>
-                  <span>COMING SOON</span>
-                </p>
-              </div>
-              <div class="container">
-                <img src="../resource/img/pc/universe/u_img_2.jpg">
-                <div class="text">
-                  On your way home, you found a "UNDER construction" sign,<br>forcing you to <strong>go back the other way.</strong>
-                </div>
-                <p class="page">2</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="tab">
-                <p class="season1 on">
-                  <strong class="luckiest">SEASON 01</strong>
-                  <span>A lifelong friend I met in dystopia</span>
-                </p>
-                <p class="season2">
-                  <strong class="luckiest">SEASON 02</strong>
-                  <span>COMING SOON</span>
-                </p>
-              </div>
-              <div class="container">
-                <img src="../resource/img/pc/universe/u_img_3.jpg">
-                <div class="text">
-                  <strong>"Oh, my God! I'm falling!"</strong><br>You eventually fell while walking on the street in the darkness without light.<br>You just fell into a hole without realizing it!
-                </div>
-                <p class="page">3</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="tab">
-                <p class="season1 on">
-                  <strong class="luckiest">SEASON 01</strong>
-                  <span>A lifelong friend I met in dystopia</span>
-                </p>
-                <p class="season2">
-                  <strong class="luckiest">SEASON 02</strong>
-                  <span>COMING SOON</span>
-                </p>
-              </div>
-              <div class="container">
-                <img src="../resource/img/pc/universe/u_img_4.jpg">
-                <div class="text">
-                  You forgot the pain for a moment and felt curious and afraid.<br>You saw the light leaking out of a huge cave and wanted to go in curious about the source of the light.<br>But you found a large rock blocking your way.<br>So you're going to give up going in, and then something grabs your collar. When You looked back, an unbelievable landscape in front of you.<br><strong>A horse, "Seok-ma," standing in a space full of green nature appeared.</strong>
-                </div>
-                <p class="page">4</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="tab">
-                <p class="season1 on">
-                  <strong class="luckiest">SEASON 01</strong>
-                  <span>A lifelong friend I met in dystopia</span>
-                </p>
-                <p class="season2">
-                  <strong class="luckiest">SEASON 02</strong>
-                  <span>COMING SOON</span>
-                </p>
-              </div>
-              <div class="container">
-                <img src="../resource/img/pc/universe/u_img_5.jpg">
-                <div class="text">
-                  The "Seok-ma" gave you a bead.<br>The bead had a small animal on it,<br>but it was hard to tell exactly what it was. The light flashed when you picked up the bead and lit it in the sun.<br>So you lost your mind in the strong light.<br><strong>When you opened your eyes, you saw a cute face full of curiosity.</strong><br><strong>It was "Jin-Myosu".</strong>
-                </div>
-                <p class="page">5</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="tab">
-                <p class="season1 on">
-                  <strong class="luckiest">SEASON 01</strong>
-                  <span>A lifelong friend I met in dystopia</span>
-                </p>
-                <p class="season2">
-                  <strong class="luckiest">SEASON 02</strong>
-                  <span>COMING SOON</span>
-                </p>
-              </div>
-              <div class="container">
-                <img src="../resource/img/pc/universe/u_img_6.jpg">
-                <div class="text">
-                  Tired of the hard journey, you arrived at a small lake and were resting.<br>At this time, "Seok-ma" and "Jin-myosu" took off your mask.<br>To you, who was embarrassed because your face was revealed, "Seok-ma" and " Jin-myosu" held out a box containing a <strong>TAL.</strong><br>You reflected the appearance of wearing a <strong>TAL</strong> on a small lake and said this.<br><strong>"I like it."</strong>
-                </div>
-                <p class="page">6</p>
-              </div>
-            </div>
+          <div class="tab">
+            <p class="season1 on">
+              <strong class="luckiest">SEASON 01</strong>
+              <span>A lifelong friend I met in dystopia</span>
+            </p>
+            <p class="season2">
+              <strong class="luckiest">SEASON 02</strong>
+              <span>COMING SOON</span>
+            </p>
           </div>
-          <i class="button prev"></i>
-          <i class="button next"></i>
+          <div class="carton-left">
+            <p id="cartonSeason" class="luckiest">SEASON 01</p>
+            <p id="cartonIntro">A lifelong friend<br>I met in dystopia</p>
+          </div>
+          <div class="swiper-background">
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="container yellow">
+                    <img src="../resource/img/pc/universe/u_img_1.jpg">
+                    <div class="text">2XXX,<br>a world where human emotions and culture are not respected.<br>All you can see is a tall building.<br><strong>There is no green color anywhere.</strong><br>In a world full of dust, people wearing oxygen mask respirators walk on the streets.</div>
+                    <p class="page">1</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="container orange">
+                    <img src="../resource/img/pc/universe/u_img_2.jpg">
+                    <div class="text">
+                      <div class="text">On your way home, you found a "UNDER construction" sign,<br>forcing you to <strong>go back the other way.</strong></div>
+                    </div>
+                    <p class="page">2</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="container blue">
+                    <img src="../resource/img/pc/universe/u_img_3.jpg">
+                    <div class="text"><strong>"Oh, my God! I'm falling!"</strong><br>You eventually fell while walking on the street in the darkness without light.<br>You just fell into a hole without realizing it!</div>
+                    <p class="page">3</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="container lightblue">
+                    <img src="../resource/img/pc/universe/u_img_4.jpg">
+                    <div class="text">You forgot the pain for a moment and felt curious and afraid.<br>You saw the light leaking out of a huge cave and wanted to go in curious about the source of the light.<br>But you found a large rock blocking your way.<br>So you're going to give up going in, and then something grabs your collar. When You looked back, an unbelievable landscape in front of you.<br><strong>A horse, "Seok-ma," standing in a space full of green nature appeared.</strong></div>
+                    <p class="page">4</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="container pink">
+                    <img src="../resource/img/pc/universe/u_img_5.jpg">
+                    <div class="text">The "Seok-ma" gave you a bead.<br>The bead had a small animal on it,<br>but it was hard to tell exactly what it was. The light flashed when you picked up the bead and lit it in the sun.<br>So you lost your mind in the strong light.<br><strong>When you opened your eyes, you saw a cute face full of curiosity.</strong><br><strong>It was "Jin-Myosu".</strong></div>
+                    <p class="page">5</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="container green">
+                    <img src="../resource/img/pc/universe/u_img_6.jpg">
+                    <div class="text">Tired of the hard journey, you arrived at a small lake and were resting.<br>At this time, "Seok-ma" and "Jin-myosu" took off your mask.<br>To you, who was embarrassed because your face was revealed, "Seok-ma" and " Jin-myosu" held out a box containing a <strong>TAL.</strong><br>You reflected the appearance of wearing a <strong>TAL</strong> on a small lake and said this.<br><strong>"I like it."</strong></div>
+                    <p class="page">6</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <i class="button prev"></i>
+            <i class="button next"></i>
+            <div class="swiper-scrollbar"></div>
+          </div>
         </div>
       </div>
     </section>
