--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Talllow</title>
+    <title>Tallower</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Tallow"/>
+    <meta property="og:title" content="Tallower"/>
     <meta property="og:description" content="K-전통문화를 지키는 문화수호자 ‘탈로워’"/>
     <meta property="og:image" content="#"/>
     <meta property="twitter:title" content="Mr.TAL"/>
@@ -175,8 +175,8 @@
             </p>
           </div>
         </div>
-        <p class="content">노어(Noer)에서 펼쳐지는 Mr.TAL과<br>가디언즈의 아름답고 신비한 모험</p>
-        <div class="subcontent">노어(Noer)에는 Mr.TAL과 그를 수호하는 5마리의 가디언즈가 있습니다.<br>Mr.TAL이 되어 가디언즈와 함께 모험을 떠나보세요.</div>
+        <p class="content">Mr.TAL과 가디언즈의 아름답고 신비한 모험</p>
+        <div class="subcontent">Mr. TAL이 되어 5마리의 가디언즈를 모두 모아  <br>새로운 모험을 떠나보세요.</div>
         <div class="carton">
           <div class="tab">
             <p class="season1 on">
@@ -257,8 +257,8 @@
             </p>
           </div>
         </div>
-        <p class="content">노어(Noer)에서 펼쳐지는 Mr.TAL과<br>가디언즈의 아름답고 신비한 모험</p>
-        <div class="subcontent">노어(Noer)에는 Mr.TAL과 그를 수호하는 5마리의 가디언즈가 있습니다.<br>Mr.TAL이 되어 가디언즈와 함께 모험을 떠나보세요.</div>
+        <p class="content">Mr.TAL과 가디언즈의 아름답고 신비한 모험</p>
+        <div class="subcontent">Mr. TAL이 되어 5마리의 가디언즈를 모두 모아  <br>새로운 모험을 떠나보세요.</div>
         <div class="carton">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -272,7 +272,7 @@
                   <span>COMING SOON</span>
                 </p>
               </div>
-              <div class="container">
+              <div class="container yellow">
                 <img src="./resource/img/pc/universe/u_img_1.jpg">
                 <div class="text">2XXX년,<br>인간의 감정과 문화가 존중받지 못하는 세상.<br><strong>어디에도 초록빛깔은 존재하지 않는다.</strong><br>미세먼지가 가득한 세상 속에서<br>마스크형 산소호흡기를 쓴 사람들이 거리를 걷는다.</div>
                 <p class="page">1</p>
@@ -289,7 +289,7 @@
                   <span>COMING SOON</span>
                 </p>
               </div>
-              <div class="container">
+              <div class="container orange">
                 <img src="./resource/img/pc/universe/u_img_2.jpg">
                 <div class="text">집으로 돌아가기 위해 같은 길을 걷던 당신은<br><strong><공사중></strong>이라는 팻말을 보고 다른 길로 돌아간다.</div>
                 <p class="page">2</p>
@@ -306,7 +306,7 @@
                   <span>COMING SOON</span>
                 </p>
               </div>
-              <div class="container">
+              <div class="container blue">
                 <img src="./resource/img/pc/universe/u_img_3.jpg">
                 <div class="text">“<strong>떨어진다!!”</strong><br>빛이 없는 어둠 속에서 길을 걷다가 발을 잘못 디딘다.<br>상황을 파악하기도 전에 구멍으로 떨어지고 만다.</div>
                 <p class="page">3</p>
@@ -323,7 +323,7 @@
                   <span>COMING SOON</span>
                 </p>
               </div>
-              <div class="container">
+              <div class="container lightblue">
                 <img src="./resource/img/pc/universe/u_img_4.jpg">
                 <div class="text">땅에 떨어진다.<br>고통은 잠시이고, 호기심과 두려움으로 심장이 두근거린다.<br> 빛이 새어나오는 동굴 안을 살짝 보면 <br>믿기지 않는 풍경이 눈 앞에 펼쳐져 있다.<br><strong>푸른 자연이 가득한 공간 속에 서 있는 말 한 마리</strong><br><strong>‘석마’</strong></div>
                 <p class="page">4</p>
@@ -340,7 +340,7 @@
                   <span>COMING SOON</span>
                 </p>
               </div>
-              <div class="container">
+              <div class="container pink">
                 <img src="./resource/img/pc/universe/u_img_5.jpg">
                 <div class="text"> 석마가 건넨 구슬을 햇빛에 대자 강렬한 빛이 쏟아져 나온다.<br><strong>잠시 후 눈을 뜨자 동그란 얼굴이 눈에 들어온다.</strong><br><strong>호기심이 가득한 귀여운 얼굴, 진묘수다.</strong></div>
                 <p class="page">5</p>
@@ -357,7 +357,7 @@
                   <span>COMING SOON</span>
                 </p>
               </div>
-              <div class="container">
+              <div class="container green">
                 <img src="./resource/img/pc/universe/u_img_6.jpg">
                 <div class="text">  지친 몸을 이끌고 도착한 옹달샘에서 석마와 진묘수가 당신에게 상자를 내민다.<br>상자를 열자, ‘탈’이 들어 있다.<br>탈을 쓰고 옹달샘을 바라본다.<br><strong>새로운 ‘나’의 모습이 마음에 든다.</strong></div>
                 <p class="page">6</p>
@@ -388,7 +388,7 @@
           탈로워는 <strong> 3가지 루트로 가입할 수 있습니다.</strong> <br><br>  첫번째. <strong>크라우드 펀딩</strong> 플랫폼에서 무형문화유산 굿즈 등<br>펀딩 상품 구매를 통한 가입  <span class="small">(원화결제)</span>
         </p>
         <p data-aos="fade-up" data-aos-duration="1000" class="content">
-          두번째.  <strong>홈페이지 내 자체 민팅 </strong>을 통한 가입<br><span class="small">(이더리움 결제, 전자지갑 필요)</span> <br>  <br>세번째. <strong> 홈페이지 내 원화 기부 </strong>를 통한 가입<br><span class="small">(기부영수증 발급 가능, 멤버십 혜택 제공(NFT 전달 불가))</span>
+          두번째.  <strong>홈페이지 내 자체 민팅 </strong>을 통한 가입<br><span class="small">(이더리움 결제, 전자지갑 필요)</span> <br>  <br>세번째. <strong> 홈페이지 내 원화 후원  </strong>를 통한 가입<br><span class="small">(기부영수증 발급 가능, 멤버십 혜택 제공(NFT 전달 불가))</span>
         </p>
         <p data-aos="fade-up" data-aos-duration="1000" class="subcontent">
                   </p>
@@ -401,7 +401,7 @@
                 <div class="info">탄생지: 조선왕릉<br>출몰지: 서울, 경기도 일대</div>
                 <div class="swiper__buttons">
                   <a>Buy on<br>Opensea</a>
-                  <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
+                  <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank"> Go to<br>Tumblbug</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -410,7 +410,7 @@
                 <div class="info">이름: ?<br>탄생지: ?<br>출몰지: ?</div>
                 <div class="swiper__buttons">
                   <a>Buy on<br>Opensea</a>
-                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
+                  <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -419,7 +419,7 @@
                 <div class="info">이름: ?<br>탄생지: ?<br>출몰지: ?</div>
                 <div class="swiper__buttons">
                   <a>Buy on<br>Opensea</a>
-                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
+                  <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -428,7 +428,7 @@
                 <div class="info">이름: ?<br>탄생지: ?<br>출몰지: ?</div>
                 <div class="swiper__buttons">
                   <a>Buy on<br>Opensea</a>
-                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
+                  <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -437,7 +437,7 @@
                 <div class="info">이름: ?<br>탄생지: ?<br>출몰지: ?</div>
                 <div class="swiper__buttons">
                   <a>Buy on<br>Opensea</a>
-                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
+                  <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -446,7 +446,7 @@
                 <div class="info">이름: ?<br>탄생지: ?<br>출몰지: ?</div>
                 <div class="swiper__buttons">
                   <a>Buy on<br>Opensea</a>
-                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
+                  <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
                 </div>
               </div>
             </div>
@@ -472,7 +472,7 @@
           </div>
         </div>
         <p class="content">
-     <strong> ‘탈로워 (Tallower) NFT’는<br>  이더리움을 기반</strong>으로<br>‘Mr.TAL’과 ‘5마리의 가디언즈’의<br><strong>이야기를 담아 발행 예정</strong>입니다.<br><br>탈로워는 <strong>3가지 루트로<br>가입할 수 있습니다.</strong><br><br> 첫번째. <strong>크라우드 펀딩</strong> 플랫폼에서<br>무형문화유산 활용 굿즈 등 <br>펀딩 상품 구매를 통한 가입   <span>(원화결제)</span><br><br>두번째.  <strong>홈페이지 내 자체 민팅 </strong>을<br>통한 가입 <span>(이더리움 결제, 전자지갑 필요)</span><br><br>세번째.  <strong>홈페이지 내 원화 기부 </strong>를 통한 가입<br><span>(
+     <strong> ‘탈로워 (Tallower) NFT’는<br>  이더리움을 기반</strong>으로<br>‘Mr.TAL’과 ‘5마리의 가디언즈’의<br><strong>이야기를 담아 발행 예정</strong>입니다.<br><br>탈로워는 <strong>3가지 루트로<br>가입할 수 있습니다.</strong><br><br> 첫번째. <strong>크라우드 펀딩</strong> 플랫폼에서<br>무형문화유산 활용 굿즈 등 <br>펀딩 상품 구매를 통한 가입   <span>(원화결제)</span><br><br>두번째.  <strong>홈페이지 내 자체 민팅 </strong>을<br>통한 가입 <span>(이더리움 결제, 전자지갑 필요)</span><br><br>세번째.  <strong>홈페이지 내 원화 후원 </strong>를 통한 가입<br><span>(
 기부영수증 발급 가능,
 멤버십 혜택 제공
 (NFT 전달 불가))</span>
@@ -488,8 +488,8 @@
               <div class="box__container"><p class="box">이름: 석마<br>탄생지: 조선왕릉<br>출몰지: 서울, 경기도 일대</p></div>
               <p class="swiper__content">석마는 노어에서 만나는 <strong>첫번째 가디언</strong>입니다.<br>도전을 좋아하고 용감한 성격으로<br>Mr.TAL이 가고자 하는 길을 안내합니다.</p>
               <div class="swiper__buttons">
-                <a>Buy on<br>Opensea</a>
-                <a>Go to<br>Tumblbug</a>
+                <a>Buy on<br>Opensea</a> 
+                <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
               </div>
             </div>
             <div class="swiper-slide">
@@ -500,7 +500,7 @@
                 He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
               <div class="swiper__buttons hidden">
                 <a>Buy on<br>Opensea</a>
-                <a>Go to<br>Tumblbug</a>
+                <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
               </div>
             </div>
             <div class="swiper-slide">
@@ -511,7 +511,7 @@
                 He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
               <div class="swiper__buttons hidden">
                 <a>Buy on<br>Opensea</a>
-                <a>Go to<br>Tumblbug</a>
+                <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
               </div>
             </div>
             <div class="swiper-slide">
@@ -522,7 +522,7 @@
                 He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
               <div class="swiper__buttons hidden">
                 <a>Buy on<br>Opensea</a>
-                <a>Go to<br>Tumblbug</a>
+                <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
               </div>
             </div>
             <div class="swiper-slide">
@@ -533,7 +533,7 @@
                 He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
               <div class="swiper__buttons hidden">
                 <a>Buy on<br>Opensea</a>
-                <a>Go to<br>Tumblbug</a>
+                <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
               </div>
             </div>
             <div class="swiper-slide">
@@ -544,7 +544,7 @@
                 He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
               <div class="swiper__buttons hidden">
                 <a>Buy on<br>Opensea</a>
-                <a>Go to<br>Tumblbug</a>
+                <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
               </div>
             </div>
           </div>
@@ -681,7 +681,7 @@
         <p data-aos="fade-up" data-aos-duration="1000" class="content light"> 멤버십 등급별 혜택(NFT 조합에 따라 제공)은 추후 변동될 수 있으며,<br>변동사항은 공지를 통해 안내됩니다.</p>
         <p data-aos="fade-up" data-aos-duration="1000" class="content light"> 무형유산
 ‘탈춤'의 유네스코 등재 기원 축제
-   ‘2022 탈로윈데이’ (10월 예정)는 모든 NFT 홀더에게 입장권 지급됩니다. <br>관광바우처는 등급과 무관하게 연 2회 제공됩니다. <br>원화 기부의 경우 기부금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</p> <br><br><br>
+   ‘2022 탈로윈데이’ (10월 예정)는 모든 NFT 홀더에게 입장권 지급됩니다. <br>관광바우처는 등급과 무관하게 연 2회 제공됩니다. <br>원화 후원의 경우 후원금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</p> <br><br><br>
         <div class="caption">
           <p><i class="mrtal"></i>Mr. TAL NFT  </p>
           <p><i class="guardians"></i>가디언즈 NFT</p>
@@ -877,9 +877,9 @@
         </div>
        <!-- <p data-aos="fade-up" data-aos-duration="1000" class="bottom">무형유산
 ‘탈춤'의 유네스코 등재 기원 축제
-   ‘2022 탈로윈데이’ (10월 예정)는 모든 탈로워 홀더에게 입장권 지급됩니다.<br>관광바우처는 등급과 무관하게 연 2회 제공됩니다. <br><strong>원화 기부의 경우 기부금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</strong></p> -->
+   ‘2022 탈로윈데이’ (10월 예정)는 모든 탈로워 홀더에게 입장권 지급됩니다.<br>관광바우처는 등급과 무관하게 연 2회 제공됩니다. <br><strong>원화 후원의 경우 후원금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</strong></p> -->
         <div class="buttons">
-          <p>원화결제 (기부)</p>
+          <p><a href=https://cs.smartraiser.co.kr/api/tallower.com/gift/gift target="_blank"> 원화결제(후원)</a></p>
           <p>이더리움 결제</p>
         </div>
       </div>
@@ -894,7 +894,7 @@
           </div>
         </div>
         <p class="content light">멤버십 등급별 혜택(NFT 조합에 따라 제공)은 추후 변동될 수 있으며,<br>변동사항은 공지를 통해 안내됩니다.</p>
-        <p class="content light">단, 무형유산 ‘탈춤’의 유네스코 등재 기원축제는 모든 탈로워 홀더에게 입장권 지급됩니다. <br>관광바우처는 등급별 관련 없이 연 2회 제공됩니다. <br>원화 기부의 경우 기부금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</p> <br><br><br>
+        <p class="content light">단, 무형유산 ‘탈춤’의 유네스코 등재 기원축제는 모든 탈로워 홀더에게 입장권 지급됩니다. <br>관광바우처는 등급별 관련 없이 연 2회 제공됩니다. <br>원화 후원의 경우 후원금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</p> <br><br><br>
         <div class="caption">
           <p><i class="mrtal"></i>Mr. TAL NFT </p>
           <p><i class="guardians"></i>가디언즈 NFT</p>
@@ -1088,9 +1088,9 @@
           <i class="button prev"></i>
           <i class="button next"></i>
         </div>
-        <!-- <p class="bottom">단, 무형유산 ‘탈춤’의 유네스코 등재 기원축제는<br>모든 탈로워 홀더에게 입장권 지급됩니다.<br><br>관광바우처는 등급별 관련 없이 연 2회 제공됩니다.<br><br><strong>원화 기부의 경우 기부금(월 2만/3만/5만)에 따라<br>4-6등급의 멤버십 혜택이 적용됩니다.</strong></p> -->
+        <!-- <p class="bottom">단, 무형유산 ‘탈춤’의 유네스코 등재 기원축제는<br>모든 탈로워 홀더에게 입장권 지급됩니다.<br><br>관광바우처는 등급별 관련 없이 연 2회 제공됩니다.<br><br><strong>원화 후원의 경우(월 2만/3만/5만)에 따라<br>4-6등급의 멤버십 혜택이 적용됩니다.</strong></p> -->
         <div class="buttons">
-          <p>원화 결제 (기부)</p>
+          <p> <a href=https://cs.smartraiser.co.kr/api/tallower.com/gift/gift target="_blank"> 원화결제(후원)</a></p>
           <p>이더리움 결제</p>
         </div>
       </div>
@@ -1259,7 +1259,7 @@
       <div class="maxwidth">
         <img src="./resource/img/pc/footer/footer_logo.png" />
         <p>
-          와이비에스에듀사회적협동조합 이사장 : 서진성 서울특별시 송파구 가락로 234 힐빌딩 2층 (우)05644<br>
+          단체명: 와이비에스에듀 사회적협동조합 대표자: 서진성  소재지: 서울특별시 송파구 가락로 234, 2층 203호(힐빌딩, 방이동) (우)05644<br>
           사업자 등록번호: 362-82-00302 대표전화: 02-6952-6783<br>
           Copyright© 2020 와이비에스에듀 사회적협동조합 All Rights Reserved
         </p>
@@ -1269,7 +1269,7 @@
       <div class="maxwidth">
         <img src="./resource/img/pc/footer/footer_logo.png" />
         <p>
-          와이비에스에듀사회적협동조합 이사장 : 서진성 서울특별시 송파구 가락로 234 힐빌딩 2층 (우)05644<br>
+          단체명: 와이비에스에듀 사회적협동조합 대표자: 서진성  소재지: 서울특별시 송파구 가락로 234, 2층 203호(힐빌딩, 방이동) (우)05644<br>
           사업자 등록번호: 362-82-00302 대표전화: 02-6952-6783<br>
           Copyright© 2020 와이비에스에듀 사회적협동조합 All Rights Reserved
         </p>
